page de bienvenida creada

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Bienvenida</title>
+	<link rel="stylesheet" href="assets/css/main.css">
+</head>
+<body>
+	<h1>!Bienvenida¡</h1>
+	<button id="registrar">Registrarme</button>
+	<button id="login">Iniciar Sesion</button>
+	<script src="assets/js/app.js"></script>
+</body>
+</html>
