--- a/registrarUsuario.html
+++ b/registrarUsuario.html
@@ -3,8 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Registrar Nuevo Usuario</title>
+	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-	
+	<h1>Registrar Usuario</h1>
+	<form id="formularioRegistro">
+		<div class="div-registrar-usuario">
+			<p>Nombre: <input id="nombre" type="text" class="input-registro"><br><span></span></p>
+			<p>Apellido: <input id="apellido" type="text" class="input-registro"><br><span></span></p>
+			<p>Correo: <input id="correo" type="email" class="input-registro"><br><span></span></p>
+			<p>Contraseña: <input id="password" type="password" class="input-registro"><br><span></span></p>
+		</div>
+		<br><button id="botonRegistrar">Registrarme</button>
+		<br><span id="spanRegistrar"></span>
+	</form>
+	<script src="assets/js/registrarUsuario.js"></script>	
 </body>
 </html>
