agregando el boton editar

--- a/perfilUsuario.html
+++ b/perfilUsuario.html
@@ -1,1 +1,21 @@
-perfil
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>perfil</title>
+	<link rel="stylesheet" href="assets/css/main.css">
+</head>
+<body>
+	<h1>Tu Perfil</h1>
+	<div class="div-perfil">
+		<p>Id: <span id="spanId" class="span-input"></span></p>
+		<p>Nombre: <span id="spanNombre" class="span-input"></span></p>
+		<p>Apellido: <span id="spanApellido" class="span-input"></span></p>
+		<p>Correo: <span id="spanCorreo" class="span-input"></span></p>
+		<p>Contraseña: <span id="spanContraseña" class="span-input"></span></p>
+
+	</div>
+	<br><button id="editar">Editar Datos</button>
+	<script src="assets/js/perfilUsuario.js"></script>
+</body>
+</html>
