funcionalidad del boton guadar

--- a/editarUsuario.html
+++ b/editarUsuario.html
@@ -1,1 +1,24 @@
-ediat
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Registrar Nuevo Usuario</title>
+	<link rel="stylesheet" href="assets/css/main.css">
+</head>
+<body>
+	<h1>Editar registro de  Usuario</h1>
+	<form id="formularioRegistro">
+		<div class="div-registrar-usuario">
+			<p>Nombre: <input id="nombre" type="text" class="input-registro"><br><span></span></p>
+			<p>Apellido: <input id="apellido" type="text" class="input-registro"><br><span></span></p>
+			<p>Correo: <input id="correo" type="email" class="input-registro"><br><span></span></p>
+			<p>Contraseña: <input id="password" type="text" class="input-registro"><br><span></span></p>
+		</div>
+		<br><button id="botonRegistrar">Guardar</button>	
+		<br><span id="spanRegistrar"></span>
+	</form>
+	<script src="assets/js/editar.js"></script>
+	<script src="assets/js/registrarUsuario.js"></script>
+
+</body>
+</html>
