cambiando el title

--- a/editarUsuario.html
+++ b/editarUsuario.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Registrar Nuevo Usuario</title>
+	<title>Usuario</title>
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
