--- a/loginUsuario.html
+++ b/loginUsuario.html
@@ -3,8 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Iniciar Sesion</title>
+	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-	
+	<h1></h1>
+	<form id="formularioLogin">
+		<div class="div-registrar-usuario">
+			<p>Correo: <input type="text" id="email"><span></span></p>
+			<p>Password: <input type="text" id="password"><span></span></p>
+		</div>
+		<br><button id="login">Iniciar Sesion</button>
+		<button id="iniciarOtra" class="ocultar">Si estoy registrado</button>
+		<button id="registrarme" class="ocultar">registrarme</button>
+		<br><span></span>
+	</form>
+	<script src="assets/js/login.js"></script>
 </body>
 </html>
